tests/error/tracing_errors/array_change_ty_inout.err
Error: Error in comptime function return (at $FILE:9:0)
   | 
 7 | 
 8 | @guppy.comptime(module)
 9 | def test(xs: array[int, 10]) -> None:
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ...
12 |         xs.append(float(i))
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

Argument `xs` is borrowed, so it is implicitly returned to the caller. Expected
it to have type `array[int, 10]`, but got `array[float, 10]`.

Guppy compilation failed due to 1 previous error
